getting angular working

--- a/templates/links.html
+++ b/templates/links.html
@@ -1,14 +1,14 @@
-<div class="bh bi">
-  <div ng-repeat="link in links" class="an bi bj">
-    <div ng-style="{backgroundImage : 'url(' + link.img + ')'}" class="ad ae ak av bk bl"></div>
-    <div class="bm bn">
-      <div class="top-text bl bo">
-        <span class="bq">
+<div class="bi bj">
+  <div ng-repeat="link in links" class="ao bj bk">
+    <div ng-style="{backgroundImage : 'url(./media/' + link.img + ')'}" class="ac ad al aw bl bm"></div>
+    <div class="bn bo">
+      <div class="top-text bm bp">
+        <span class="br">
           {{ link.title }}
         </span>
-        <span class="bl bm"></span>
+        <span class="bm bn"></span>
       </div>
-      <div class="ar bp">
+      <div class="as bq">
         {{ link.subtitle }}
       </div>
     </div>
