--- a/templates/outerBottomLarge.html
+++ b/templates/outerBottomLarge.html
@@ -1,20 +1,20 @@
 <div>
-  <div class="ad ae af ag">
-    <div class="ae af aj ak">
-      <div ng-style="{backgroundImage : 'url(' + img + ')'}" class="ae au av"></div>
-      <span ng-if="cornerText !== undefined" class="ad ag am aw">
+  <div class="ac ad ae af ag">
+    <div class="ad ae ak al">
+      <div ng-style="{backgroundImage : 'url(' + img + ')'}" class="ad av aw"></div>
+      <span ng-if="cornerText !== undefined" class="ac af an ax">
         {{ cornerText }}
       </span>
     </div>
-    <div class="ad ae al am an ao ap">
+    <div class="ac ad am an ao ap aq">
       {{ title }}
     </div>
-    <div class="ad ae an ao aq ar as">
+    <div class="ac ad ao ap ar as at">
       {{ subtitle }}
     </div>
   </div>
-  <div class="ad ae ah ai">
-    <div class="at">
+  <div class="ac ad ai aj">
+    <div class="au">
       <ng-transclude></ng-transclude>
     </div>
   </div>
