--- a/templates/outerRight.html
+++ b/templates/outerRight.html
@@ -1,20 +1,20 @@
 <div>
-  <div class="ad ax ay az ba">
-    <div class="aj ak ax ay bd">
-      <div ng-style="{backgroundImage : 'url(' + img + ')'}" class="ae au av"></div>
-      <span ng-if="cornerText !== undefined" class="ad ag am aw">
+  <div class="ac ag ay az ba bb">
+    <div class="ak al ay az be">
+      <div ng-style="{backgroundImage : 'url(' + img + ')'}" class="ad ah av aw"></div>
+      <span ng-if="cornerText !== undefined" class="ac af an ax">
         {{ cornerText }}
       </span>
     </div>
-    <div class="ad al am an ao ax bc be bf">
+    <div class="ac am an ao ap ay bd bf bg">
       {{ title }}
     </div>
-    <div class="ad ao aq ar ax bc bf bg">
+    <div class="ac ap ar as ay bd bg bh">
       {{ subtitle }}
     </div>
   </div>
-  <div class="ad ah ax ba bb bc">
-    <div class="at">
+  <div class="ac ai ay bb bc bd">
+    <div class="au">
       <ng-transclude></ng-transclude>
     </div>
   </div>
