--- a/templates/links.html
+++ b/templates/links.html
@@ -1,14 +1,14 @@
-<div class="bi bj">
-  <div ng-repeat="link in links" class="ao bj bk">
-    <div ng-style="{backgroundImage : 'url(./media/' + link.img + ')'}" class="ac ad al aw bl bm"></div>
-    <div class="bn bo">
-      <div class="top-text bm bp">
-        <span class="br">
+<div class="bh bi">
+  <div ng-repeat="link in links" class="am bi bj">
+    <div ng-style="{backgroundImage : 'url(./media/' + link.img + ')'}" class="ac ad aj au bk bl"></div>
+    <div class="bm bn">
+      <div class="top-text bl bo">
+        <span class="bq">
           {{ link.title }}
         </span>
-        <span class="bm bn"></span>
+        <span class="bl bm"></span>
       </div>
-      <div class="as bq">
+      <div class="aq bp">
         {{ link.subtitle }}
       </div>
     </div>
