--- a/templates/outerBottomLarge.html
+++ b/templates/outerBottomLarge.html
@@ -1,20 +1,20 @@
 <div>
-  <div class="ac ad ae af ag">
-    <div class="ad ae ak al">
-      <div ng-style="{backgroundImage : 'url(' + img + ')'}" class="ad av aw"></div>
-      <span ng-if="cornerText !== undefined" class="ac af an ax">
+  <div class="ac ad ae af">
+    <div class="ad ae ai aj">
+      <div ng-style="{backgroundImage : 'url(' + img + ')'}" class="ad at au"></div>
+      <span ng-if="cornerText !== undefined" class="ac af al av">
         {{ cornerText }}
       </span>
     </div>
-    <div class="ac ad am an ao ap aq">
-      {{ title }}
+    <div class="ac ad ak al am an ao">
+      {{ mytitle }}
     </div>
-    <div class="ac ad ao ap ar as at">
+    <div class="ac ad am an ap aq ar">
       {{ subtitle }}
     </div>
   </div>
-  <div class="ac ad ai aj">
-    <div class="au">
+  <div class="ac ad ag ah">
+    <div class="as">
       <ng-transclude></ng-transclude>
     </div>
   </div>
