--- a/templates/outerRight.html
+++ b/templates/outerRight.html
@@ -1,20 +1,20 @@
 <div>
-  <div class="ac ag ay az ba bb">
-    <div class="ak al ay az be">
-      <div ng-style="{backgroundImage : 'url(' + img + ')'}" class="ad ah av aw"></div>
-      <span ng-if="cornerText !== undefined" class="ac af an ax">
+  <div class="ac aw az ba bb">
+    <div class="ai aj az ba be">
+      <div ng-style="{backgroundImage : 'url(' + img + ')'}" class="ad at au ax"></div>
+      <span ng-if="cornerText !== undefined" class="ac af al av">
         {{ cornerText }}
       </span>
     </div>
-    <div class="ac am an ao ap ay bd bf bg">
-      {{ title }}
+    <div class="ac ak al am an ay az bd bf">
+      {{ mytitle }}
     </div>
-    <div class="ac ap ar as ay bd bg bh">
+    <div class="ac an ap aq az bd bf bg">
       {{ subtitle }}
     </div>
   </div>
-  <div class="ac ai ay bb bc bd">
-    <div class="au">
+  <div class="ac ag az bb bc bd">
+    <div class="as">
       <ng-transclude></ng-transclude>
     </div>
   </div>
