--- a/templates/page.html
+++ b/templates/page.html
@@ -1,4 +1,4 @@
-<outer-right title="{{ title }}" subtitle="{{ subtitle }}" img="./media/{{ img }}">
+<outer-right mytitle="{{ title }}" subtitle="{{ subtitle }}" img="./media/{{ img }}">
   <div ng-bind-html="content"></div>
   <links-template links="links"></links-template>
 </outer-right>
