getting submission linking

--- a/templates/links.html
+++ b/templates/links.html
@@ -1,14 +1,14 @@
-<div class="bh bi">
-  <div ng-repeat="link in links" class="am bi bj">
-    <div ng-style="{backgroundImage : 'url(./media/' + link.img + ')'}" class="ac ad aj au bk bl"></div>
-    <div class="bm bn">
-      <div class="top-text bl bo">
-        <span class="bq">
+<div class="bs bt">
+  <div ng-repeat="link in links" class="an bt bu">
+    <div ng-style="{backgroundImage : 'url(./media/' + link.img + ')'}" class="ac ad ak av bv bw"></div>
+    <div class="bx by">
+      <div class="top-text bw bz">
+        <span class="cb">
           {{ link.title }}
         </span>
-        <span class="bl bm"></span>
+        <span class="bw bx"></span>
       </div>
-      <div class="aq bp">
+      <div class="ar ca">
         {{ link.subtitle }}
       </div>
     </div>
