--- a/templates/outerBottomSmall.html
+++ b/templates/outerBottomSmall.html
@@ -1,6 +1,6 @@
 <div>
-  <div class="ac ad ae af">
-    <div class="ad ae aj ak">
+  <div class="ac ad af ax">
+    <div class="ad aj ak ax">
       <div ng-style="{backgroundImage : 'url(' + img + ')'}" class="ad au av"></div>
       <span ng-if="cornerText !== undefined" class="ac af am aw">
         {{ cornerText }}
@@ -13,7 +13,7 @@
       {{ subtitle }}
     </div>
   </div>
-  <div class="ac ad ag ah ai">
+  <div class="ac ad ag ah ay">
     <div class="at">
       <ng-transclude></ng-transclude>
     </div>
