--- a/templates/outerLeft.html
+++ b/templates/outerLeft.html
@@ -1,19 +1,19 @@
 <div>
-  <div class="ac az bc bd be bf">
+  <div class="ac az bc bd be bi">
     <div class="aj ak bc bd bj">
       <div ng-style="{backgroundImage : 'url(' + img + ')'}" class="ad au av ba"></div>
       <span ng-if="cornerText !== undefined" class="ac af am aw">
         {{ cornerText }}
       </span>
     </div>
-    <div class="ac al am an ao bb bc bi bk bl">
+    <div class="ac al am an ao bb bc bf bp bq">
       {{ mytitle }}
     </div>
-    <div class="ac ao aq ar bc bi bk bm bn">
+    <div class="ac ao aq ar bc bf bm bp br">
       {{ subtitle }}
     </div>
   </div>
-  <div class="ac ag bc be bg bh bi">
+  <div class="ac ag bc be bf bh bo">
     <div class="at">
       <ng-transclude></ng-transclude>
     </div>
