--- a/templates/submission.html
+++ b/templates/submission.html
@@ -1,4 +1,4 @@
-<outer-vertical mytitle="{{ title }}" subtitle="{{ subtitle }}" img="./media/{{ img }}" side="left">
+<outer-vertical img="./media/{{ img }}" mytitle="{{title}}" subtitle="{{subtitle}}" side="{{side}}">
   <div ng-bind-html="content"></div>
   <links-template links="links"></links-template>
 </outer-vertical>
