--- a/templates/links.html
+++ b/templates/links.html
@@ -4,12 +4,12 @@
     <div class="bx by">
       <div class="top-text bw bz">
         <span class="cb">
-          {{ link.title }}
+          {{ link.title | uppercase}}
         </span>
         <span class="bw bx"></span>
       </div>
       <div class="ar ca">
-        {{ link.subtitle }}
+        {{ link.subtitle | uppercase}}
       </div>
     </div>
   </div>
