--- a/templates/outerBottomSmall.html
+++ b/templates/outerBottomSmall.html
@@ -7,10 +7,10 @@
       </span>
     </div>
     <div class="ac ad al am an ao ap">
-      {{ mytitle }}
+      {{ mytitle | uppercase }}
     </div>
     <div class="ac ad an ao aq ar as">
-      {{ subtitle }}
+      {{ subtitle | uppercase }}
     </div>
   </div>
   <div class="ac ad ag ah ay">
