--- a/templates/outerRight.html
+++ b/templates/outerRight.html
@@ -7,10 +7,10 @@
       </span>
     </div>
     <div class="ac al am an ao bb bc bi bk bl">
-      {{ mytitle }}
+      {{ mytitle | uppercase }}
     </div>
     <div class="ac ao aq ar bc bi bk bm bn">
-      {{ subtitle }}
+      {{ subtitle | uppercase }}
     </div>
   </div>
   <div class="ac ag bc be bg bh bi">
