--- a/templates/outerLeft.html
+++ b/templates/outerLeft.html
@@ -7,10 +7,10 @@
       </span>
     </div>
     <div class="ac al am an ao bb bc bf bp bq">
-      {{ mytitle }}
+      {{ mytitle | uppercase }}
     </div>
     <div class="ac ao aq ar bc bf bm bp br">
-      {{ subtitle }}
+      {{ subtitle | uppercase }}
     </div>
   </div>
   <div class="ac ag bc be bf bh bo">
